fix login error